<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Ola</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ride">Ride</string>
    <string name="plan">Plan</string>
    <string name="explore">Explore</string>
    <string name="sedan">Sedan</string>
    <string name="mini">Mini</string>
    <string name="rideNow">Ride Now</string>
    <string name="rideLater">Ride Later</string>
    <string name="pool">Pool</string>
</resources>